filters/authorization/envoy.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9902
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      http_service:
                        server_uri:
                          uri: 127.0.0.1:8888/roles
                          cluster: roles_server
                          timeout: 0.25s
                  # - name: envoy.filters.http.wasm
                  #   typed_config:
                  #     "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  #     config:
                  #       name: authorization
                  #       root_id: authorization
                  #       vm_config:
                  #         runtime: envoy.wasm.runtime.v8
                  #         code:
                  #           local:
                  #             filename: /Users/liangguo/Desktop/projects/envoy-filters/filters/authorization/main.wasm
                  #       configuration:
                  #         "@type": "type.googleapis.com/google.protobuf.StringValue"
                  #         value: |
                  #           {}
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                
                route_config:
                  name: echo_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          request_headers_to_remove:
                            - "test"
                          request_headers_to_add:
                            - header:
                                key: header-add-from-envoy
                                value: liang
                          route:
                            cluster: echo_server

  clusters:
    - name: echo_server
      type: static
      load_assignment:
        cluster_name: echo_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000
    - name: roles_server
      type: static
      load_assignment:
        cluster_name: roles_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8888
